--- a/_posts/2018-04-01-testing.markdown
+++ b/_posts/2018-04-01-testing.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to My Site!"
+title:  "Testing..."
 date:   2018-04-01 15:59:55 +0000
 categories: jekyll update
 ---
